# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_cargo_crate("lib") {
  crate_name = "hyper_tls"
  crate_type = "rlib"
  crate_root = "src/lib.rs"

  sources = [ "src/lib.rs" ]
  edition = "2018"
  cargo_pkg_version = "0.5.0"
  cargo_pkg_authors = "Sean McArthur <sean@seanmonstar.com>"
  cargo_pkg_name = "hyper-tls"
  cargo_pkg_description = "Default TLS implementation for use with hyper"
  deps = [
    "//third_party/rust/crates/bytes:lib",
    "//third_party/rust/crates/hyper:lib",
    "//third_party/rust/crates/rust-native-tls:lib",
    "//third_party/rust/crates/tls/tokio-native-tls:lib",
    "//third_party/rust/crates/tokio/tokio:lib",
  ]
}
